VHCS 1.0.0 ω Omega Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 _________________________________________________________________
/ @TODO:                                                          \
|        - FastCGI:                                               |
|               * apache: check if stats are working with FastCGI |
|                                                                 |
|         - AWStats:                                              |
|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-04-05 Benedikt Heintel
	- LANGUAGES:
		* English: fixed spelling mistake
		* French: changed translated strings
		* Spanish: added Spanish Spain
		* Russian: added missing strings
		* Turkish: added missing strings

2007-04-05 Jan Porath
	- ENGINE:
		* fixed bug #144: after deleting a protected area in the GUI, the directory is still protected
	- SETUP:
		* fixed bug #60: user groupes deleted on uninstall
		* fixed bug #153: when installing the setup asks you the hostname and cuts it down to the local part

2007-04-04 Benedikt Heintel
	- LANGUAGES:
		* English: updates
		* Turkish: added missing strings
		* Russian: added missing strings
	- GUI:
		* Updated translation strings

2007-04-03 Benedikt Heintel
	- GUI:
		* fixed: color of table header headlines in Firefox
		* fixed bug #148: alias domainname was wrong in adminlog
		* fixed: layout issues on add_mail_acc.tpl

2007-04-02 Benedikt Heintel
	- GUI:
		* fixed: bug on language upload
		* fixed bug #132: No special chars on filemanager (Jan Porath)

2007-04-01 Benedikt Heintel
	- CONFIGS:
		* fixed bug in awstats Makefile (Jan Porath)
	- ENGINE:
		* fixed: variable parsing in uninstal (Jan Porath)
		* fixed bug #141: compression for SQL Backup
		* fixed bug #138: htaccess status not changed (Jan Porath)
	- GUI:
		* fixed: bug on language upload